--- a/SMFL.vcxproj
+++ b/SMFL.vcxproj
@@ -144,12 +144,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="application_facade.cpp" />
+    <ClCompile Include="app_memento.cpp" />
     <ClCompile Include="button.cpp" />
     <ClCompile Include="change_outline_color_command.cpp" />
     <ClCompile Include="change_outline_width_command.cpp" />
     <ClCompile Include="changing_outline_color_state.cpp" />
     <ClCompile Include="circle_decorator.cpp" />
     <ClCompile Include="circle_factory.cpp" />
+    <ClCompile Include="command.cpp" />
     <ClCompile Include="create_circle_command.cpp" />
     <ClCompile Include="create_rectangle_command.cpp" />
     <ClCompile Include="creating_circle_state.cpp" />
@@ -164,6 +166,7 @@
     <ClCompile Include="file_manager.cpp" />
     <ClCompile Include="filling_state.cpp" />
     <ClCompile Include="fill_shape_command.cpp" />
+    <ClCompile Include="fill_visitor.cpp" />
     <ClCompile Include="grouped_figure.cpp" />
     <ClCompile Include="my_extensions.cpp" />
     <ClCompile Include="point.cpp" />
@@ -176,10 +179,12 @@
     <ClCompile Include="SMFL.cpp" />
     <ClCompile Include="triangle_decorator.cpp" />
     <ClCompile Include="triangle_factory.cpp" />
+    <ClCompile Include="undo_command.cpp" />
     <ClCompile Include="user_handler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application_facade.h" />
+    <ClInclude Include="app_memento.h" />
     <ClInclude Include="button.h" />
     <ClInclude Include="change_outline_color_command.h" />
     <ClInclude Include="change_outline_width_command.h" />
@@ -202,6 +207,7 @@
     <ClInclude Include="file_manager.h" />
     <ClInclude Include="filling_state.h" />
     <ClInclude Include="fill_shape_command.h" />
+    <ClInclude Include="fill_visitor.h" />
     <ClInclude Include="grouped_figure.h" />
     <ClInclude Include="my_extensions.h" />
     <ClInclude Include="point.h" />
@@ -214,7 +220,9 @@
     <ClInclude Include="tool_state.h" />
     <ClInclude Include="triangle_decorator.h" />
     <ClInclude Include="triangle_factory.h" />
+    <ClInclude Include="undo_command.h" />
     <ClInclude Include="user_handler.h" />
+    <ClInclude Include="visitor.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
